[package]
name = "event_system"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0.97"
serde = "1.0.219"
wmi = "0.15.1"
reqwest = {version = "0.12.15", features = ["json"]}
clap = { version = "4.5.32", features = ["derive"] }
chrono = "0.4.40"
pico-args = "0.5"
async-opcua = { version = "0.14", features = ["client", "console-logging"] }
openssl = { version = "0.10", features = ["vendored"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
#pedantic = "deny"
#nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
